--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - name: check out the code to build server
         uses: actions/checkout@v3
+
+      - name: set the ubuntu user as the owner
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.SSH_USER_NAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: sudo chown -R ubuntu /var/www/html
+
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
@@ -20,3 +29,11 @@ jobs:
           source: "./html/*"
           target: "/var/www/html"
           strip_components: 1
+
+      - name: set the root user back as the owner
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.SSH_USER_NAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: sudo chown -R root /var/www/html
