--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: check out the code to build server
         uses: actions/checkout@v3
-
+        
       - name: set the ubuntu user as the owner
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -22,7 +22,7 @@ jobs:
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.PROD.HOST }}
+          host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.SSH_USER_NAME }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
